<resources>
    <string name="app_name">л-гл</string>
    <string name="label1">Liters:</string>
    <string name="default_edit_text">100</string>
    <string name="default_result_text">0.00</string>
    <string name="button_ok_text">OK</string>
    <string name="label2">Gallons:</string>
    <string name="button_help_text">Help</string>
    <string name="help_label_text">Click to OK button to convert. For example:</string>
</resources>
